# PictureProcessor

./: CMakeLists.txt  Main.cpp  Makefile  PicLibrary.cpp  PicLibrary.hpp  PicWrapper.cpp  PicWrapper.hpp  Picture.cpp  Picture.hpp  picture_lib
